# cqrs-rust

./: .gitignore  Cargo.toml  README.md  create-user.http  docker-compose-dev.yaml  docker-compose.yaml
.github/workflows/: rust.yml
cqrs-example-client/: Cargo.toml
cqrs-example-client/src/: Settings.toml  error.rs  main.rs
cqrs-example-server/: Cargo.toml
cqrs-example-server/src/: Settings.toml  error.rs  main.rs
cqrs-kafka/: Cargo.toml
cqrs-kafka/src/: aggregate.rs  carrier.rs  command.rs  error.rs  inbound.rs  lib.rs  operations.rs  outbound.rs  traits.rs
cqrs-library/: Cargo.toml  build.rs
cqrs-library/src/: envelops.proto  error.rs  lib.rs  locks.rs  messages.proto  messages.rs  outbound.rs
cqrs-library/src/cqrs/: command.rs  messages.rs  mod.rs  operations.rs  traits.rs
cqrs-messages/: Cargo.toml  build.rs
cqrs-messages/src/: lib.rs
protobuf/: messages.desc
src/: cqrs_kafka.rs  envelops.proto  main.rs
