[package]
name = "cqrs_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
bytes = "1.1.0"
prost-types = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
lazy_static = "1.4.0"
dashmap = "5.3.3"
log = "0.4.17"

[build-dependencies]
prost-build = "0.9"

[[bin]]
name = "cqrs-example-server"
test = false
bench = false

[[bin]]
name = "cqrs-example-client"
test = false
bench = false

[kafka]
name = "cqrs_kafka"
path = "src/cqrs_kafka.rs"

[lib]
name = "cqrs"
path = "src/cqrs.rs"
