[workspace]
members = [
    "cqrs-library",
    "cqrs-kafka",
    "cqrs-example-client",
    "cqrs-example-server",
    "cqrs-messages"
]

[workspace.dependencies]
thiserror = "2.0.16"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
log = "0.4.8"
env_logger = "0.11.8"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
typetag = "0.2"
config = "0.15.15"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
futures = "0.3.28"
prost = { version = "0.12.3" , features = ["std"] }
prost-build = "0.12.3"
serde_json = "1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = "0.4"
