[package]
name = "cqrs-example-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-library = { path = "../cqrs-library" }
cqrs-kafka = { path = "../cqrs-kafka" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.13.3"
typetag = "0.2"

log = "0.4.8"
env_logger = "0.10.0"
tokio = "1.33.0"
