[package]
name = "cqrs-example-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-library = { path = "../cqrs-library" }
cqrs-kafka = { path = "../cqrs-kafka" }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
typetag = { workspace = true }
config = { workspace = true }
