[package]
name = "cqrs-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-library = { path = "../cqrs-library" }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
log = "0.4.8"
futures = "0.3.28"

[dev-dependencies]
testcontainers = "0.15.0"
testcontainers-modules =  { version = "0.2.0" , features = ["kafka"]}
env_logger = "0.10.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
