[package]
name = "cqrs-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-library = { path = "../cqrs-library" }
rdkafka = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
testcontainers = "0.25.0"
testcontainers-modules =  { version = "0.13.0", features = ["kafka"]}
env_logger = "0.11.8"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
