[package]
name = "cqrs-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-library = { path = "../cqrs-library" }
rdkafka = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules =  { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
