[package]
name = "cqrs-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-messages = { path = "../cqrs-messages" }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
typetag = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
env_logger ={ workspace = true }
thiserror = { workspace = true }

